# MagicMD

./: .gitignore  .magicmd.example.toml  .pagemd.example.toml  .prettierignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  ROADMAP.md  SKILL.md  package-lock.json  package.json  prettier.config.cjs  pyproject.toml
.github/workflows/: ci.yml  deploy-website.yml  publish.yml
docs/: MagicMD-v0.1-design.md  MagicMD-v0.1-implementation-plan.md  MagicMD-v0.2-template-system-plan.md  MagicMD-website-config-builder-plan.md  PageMD-v0.1-design.md  PageMD-v0.1-implementation-plan.md  development.md  live-regression.md  supported-sites.md  troubleshooting.md  wechat-regression-corpus.md
docs/integrations/: haogit-import.md  python-sdk.md
docs/planning/: v0.5-roadmap.md  v0.6-publish-workflow-implementation-plan.md  v0.6-publish-workflow.md
docs/releases/: post-release-checklist.md  release-automation.md  v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
examples/python/: convert_for_cms.py  convert_to_json.py
npm/magicmd/: README.md  package.json
samples/: csdn-complex-10.txt  juejin-complex-5.txt  juejin-homepage-5.txt
skills/magicmd/: SKILL.md
src/magicmd/: __init__.py  assets.py  cli.py  config.py  detect.py  diagnostics.py  exceptions.py  i18n.py  models.py  output.py  presets.py  quality.py  sdk.py  template_vars.py
src/pagemd/: assets.py  cli.py  config.py  detect.py  models.py  output.py  quality.py
tests/: test_assets.py  test_browser_fetcher.py  test_cli.py  test_config.py  test_detect.py  test_docx.py  test_live_regression_manifest.py  test_markdown.py  test_models.py  test_output.py  test_platform_csdn.py  test_platform_generic.py  test_platform_juejin.py  test_platform_registry.py  test_platform_wechat.py  test_platforms.py  test_project_metadata.py  test_publish_github.py  test_publish_planner.py  test_quality.py  test_regression_manifest.py  test_sdk.py  test_site_validation_manifest.py  test_studio.py  test_template_vars.py  test_website_config_builder.py
tests/fixtures/: live_regression_manifest.json  site_validation_manifest.json  wechat_regression_manifest.json
website/: .gitignore  README.md  agent-skill.md  config-builder.md  config.md  index.md  package-lock.json  package.json  publish-github.md  quick-start.md  sdk.md  studio.md  supported-sites.md  troubleshooting.md
website/.vitepress/: config.ts
website/en/: agent-skill.md  config-builder.md  config.md  index.md  sdk.md  (+5 more)
(+27 files in other folders)
