[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "magicmd"
version = "0.6.0"
description = "Convert public article links into configurable Markdown packages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "MagicMD Contributors" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "camoufox[geoip]>=0.4",
  "chardet>=5.2",
  "httpx>=0.27",
  "markdownify>=0.13",
  "pydantic>=2.8",
  "rich>=13.7",
  "typer>=0.12"
]
keywords = ["markdown", "article", "wechat", "juejin", "crawler"]

[project.scripts]
magicmd = "magicmd.cli:entrypoint"

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/magicmd"]

[tool.hatch.build.targets.wheel.force-include]
"src/magicmd/templates/magicmd.example.toml" = "magicmd/templates/magicmd.example.toml"
"src/magicmd/studio/index.html" = "magicmd/studio/index.html"
"src/magicmd/studio/studio.css" = "magicmd/studio/studio.css"
"src/magicmd/studio/studio.js" = "magicmd/studio/studio.js"

[tool.hatch.build.targets.sdist]
exclude = [
  "/dist",
  "/output",
  "/website/.vitepress/cache",
  "/website/.vitepress/dist",
  "/website/node_modules"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: live tests that require network and browser runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"
